# clog

./: .gitignore  AUTHORS  Makefile.am  README  clog.pc  clog.pc.in  configure.ac
src/: Makefile.am  clog.c  clog.h
